fix blog text - add align left

--- a/style.css
+++ b/style.css
@@ -37,8 +37,7 @@ p {
  margin-top: 20px;
  margin-left: 20px;
  margin-right: 20px;
- text-align: justify;
- text-align-last: left;
+ text-align: left;
  line-height: 130%;
  color: #fff;
 }
